# H5CosmoKit

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
H5CosmoKit/: H5CosmoKit.py  __init__.py  tutorial.md
H5CosmoKit/analysis/: __init__.py  submodule.py
docs/source/: H5CosmoKit.rst  conf.py  index.rst  test.md  tutorial.md
test/: test_compare_sequences.py  test_download.py  test_pk_suffix.py  test_preview.py  test_temperature.py
